--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -35,8 +36,10 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:1.1.0'
 
 
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
