--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     implementation 'com.polyak:icon-switch:1.0.0'
+    implementation 'com.facebook.android:facebook-login:4.42.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
