--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     implementation 'com.polyak:icon-switch:1.0.0'
     implementation 'com.facebook.android:facebook-login:4.42.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
