--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.19.0'
     androidTestImplementation "org.mockito:mockito-android:2.8.9"
 
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
 }
