--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /build
 /captures
 .externalNativeBuild
+
+app/src/debug/res/values/google_maps_api.xml
+app/src/release/res/values/google_maps_api.xml
+app/src/main/res/values/strings.xml
